--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc --watch"
   }
 }
